Fix code style issues in UserManagementController.java
- Removed unused imports and code
- Fixed indentation and spacing issues